Melhorias no código

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
 
         <div id="result">
             <h1 style="color: #bf94ff;">RESULTADO</h1>
-            <p id="resultText"></p>
+            
+            <div id="overflow">
+                <p id="resultText"></p>
+            </div>
+
             <button id="copyButton">COPIAR</button>
         </div>
 
